# JsonParser

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
include/: Config.h  JsonTypes.h  LexerParser.h  config.h  iniParser.h  json.h  jsonParser.h  jsonTypes.h  json_type.h  lexer_parser.h  sjApi.h  utilities.h
src/: JsonTypes.cpp  LexerParser.cpp  Utilities.cpp  json.cpp  jsonParser.cpp  jsonTypes.cpp  json_type.cpp  lexer_parser.cpp  main.cpp  sjApi.cpp  utilities.cpp
test/: data.json  makefile  syntaxCheck.cpp
